[tool.poetry]
name = "urls"
version = "0.1.0"
description = ""
authors = ["romanlosev <losik19-94@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
validator-collection = "^1.5.0"
requests = "^2.28.1"
pytest = "^7.2.0"
isort = "^5.10.1"
coverage = "^6.5.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
